--- a/example/lib/widgets/example/mysql/_filtering.j2.html
+++ b/example/lib/widgets/example/mysql/_filtering.j2.html
@@ -1,4 +1,4 @@
-<form method="get" action="http://localhost:8085/example/mysql">
+<form method="get">
     <th style="max-width: 80px;">
         <input
         class="form-control form-control-sm 
