--- a/example/lib/widgets/example/mysql/_categories.j2.html
+++ b/example/lib/widgets/example/mysql/_categories.j2.html
@@ -23,8 +23,9 @@
           </td>
           <td>
             <a
-              href="{{ $l.updateUrlQuery($rq, {'id': category.id|s, 'action': 'delete_category'|s}) }}"
-              class="btn btn-sm"
+              data-href="{{ $l.updateUrlQuery($rq, {'id': category.id|s, 'action': 'delete_category'|s}) }}"
+              data-message="{{ $t('Are you sure you want to delete this category?') ~ ' (' ~ category.title ~ ')' }}"
+              class="btn btn-sm js-delete-links"
             >
               <i class="fas fa-trash text-danger"></i>
             </a>
