--- a/example/lib/widgets/example/mysql/overview.j2.html
+++ b/example/lib/widgets/example/mysql/overview.j2.html
@@ -96,11 +96,14 @@
               <td>{{ book.title }}</td>
               <td>{{ book.author }}</td>
               <td>{{ book.published_date | dateFormat('dd/MM/y') }}</td>
-              <td>{{ book.categories_title }}</td>
+              <td>
+                <em class="italic">{{ book.category_title }}</em>
+              </td>
               <td class="text-center">
                 <a
-                  href="{{ $l.updateUrlQuery($rq, {'id':book.id|s, 'action': 'delete'|s}) }}"
-                  class="btn btn-sm"
+                  data-href="{{ $l.updateUrlQuery($rq, {'id':book.id|s, 'action': 'delete'|s}) }}"
+                  data-message="{{ $t('Are you sure you want to delete this book?') ~ ' (' ~ book.title ~ ')' }}"
+                  class="btn btn-sm js-delete-links"
                 >
                   <i class="fas fa-trash text-danger"></i>
                 </a>
