--- a/example/lib/widgets/example/auth.j2.html
+++ b/example/lib/widgets/example/auth.j2.html
@@ -9,7 +9,7 @@
   <div class="rounded-lg border border-slate-200 bg-white shadow-sm">
     <div class="p-4 text-sm text-slate-700">
       {{ $t('auth.welcome') }}
-      <span class="font-medium text-blue-600">{{ user.name }}</span>
+      <span class="font-medium text-primary-600">{{ user.name }}</span>
     </div>
   </div>
 
@@ -24,25 +24,25 @@
       <li class="p-3 hover:bg-slate-50">
         <div class="flex flex-col gap-1 md:flex-row md:items-center">
           <b class="w-40 shrink-0 text-slate-700">{{ $t('auth.view') }}</b>
-          <i class="text-blue-600">example/lib/widgets/example/auth.j2.html</i>
+          <i class="text-primary-600">example/lib/widgets/example/auth.j2.html</i>
         </div>
       </li>
       <li class="p-3 hover:bg-slate-50">
         <div class="flex flex-col gap-1 md:flex-row md:items-center">
           <b class="w-40 shrink-0 text-slate-700">{{ $t('auth.controller') }}</b>
-          <i class="text-blue-600">example/lib/controllers/home_controller.dart</i>
+          <i class="text-primary-600">example/lib/controllers/home_controller.dart</i>
         </div>
       </li>
       <li class="p-3 hover:bg-slate-50">
         <div class="flex flex-col gap-1 md:flex-row md:items-center">
           <b class="w-40 shrink-0 text-slate-700">{{ $t('auth.authController') }}</b>
-          <i class="text-blue-600">example/lib/controllers/auth_controller.dart</i>
+          <i class="text-primary-600">example/lib/controllers/auth_controller.dart</i>
         </div>
       </li>
       <li class="p-3 hover:bg-slate-50">
         <div class="flex flex-col gap-1 md:flex-row md:items-center">
           <b class="w-40 shrink-0 text-slate-700">{{ $t('auth.router') }}</b>
-          <i class="text-blue-600">example/lib/route/web_route.dart</i>
+          <i class="text-primary-600">example/lib/route/web_route.dart</i>
         </div>
       </li>
     </ul>
