--- a/example/lib/widgets/example/email.j2.html
+++ b/example/lib/widgets/example/email.j2.html
@@ -17,7 +17,7 @@
               type="text"
               name="from"
               id="from"
-              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.from.failed else '' }}"
+              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.from.failed else '' }}"
             />
             <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.from.failed else 'hidden' }}">
               {{ $t($n('emailForm/from/errors/0')) }}
@@ -31,7 +31,7 @@
               name="fromName"
               id="fromName"
               placeholder="{{ $t('email.placeholder.name') }}"
-              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.fromName.failed else '' }}"
+              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.fromName.failed else '' }}"
             />
             <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.fromName.failed else 'hidden' }}">
               {{ $t($n('emailForm/fromName/errors/0')) }}
@@ -47,7 +47,7 @@
             name="email"
             id="email"
             placeholder="{{ $t('email.placeholder.to') }}"
-            class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.email.failed else '' }}"
+            class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.email.failed else '' }}"
           />
           <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.email.failed else 'hidden' }}">
             {{ $t($n('emailForm/email/errors/0')) }}
@@ -62,7 +62,7 @@
               name="subject"
               id="subject"
               placeholder="{{ $t('email.placeholder.subject') }}"
-              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.subject.failed else '' }}"
+              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.subject.failed else '' }}"
             />
           <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.subject.failed else 'hidden' }}">
             {{ $t($n('emailForm/subject/errors/0')) }}
@@ -75,7 +75,7 @@
             name="message"
             id="message"
             placeholder="{{ $t('email.placeholder.message') }}"
-            class="min-h-[140px] w-full rounded-md border border-slate-300 bg-white px-3 py-2 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.message.failed else '' }}"
+            class="min-h-[140px] w-full rounded-md border border-slate-300 bg-white px-3 py-2 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.message.failed else '' }}"
           >{{ emailForm.message.value }}</textarea>
           <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.message.failed else 'hidden' }}">
             {{ $t($n('emailForm/message/errors/0')) }}
@@ -91,7 +91,7 @@
               name="host"
               id="host"
               placeholder="{{ $t('email.placeholder.host') }}"
-              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.host.failed else '' }}"
+              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.host.failed else '' }}"
             />
             <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.host.failed else 'hidden' }}">
               {{ $t($n('emailForm/host/errors/0')) }}
@@ -105,7 +105,7 @@
               name="port"
               id="port"
               placeholder="{{ $t('email.placeholder.port') }}"
-              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.port.failed else '' }}"
+              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.port.failed else '' }}"
             />
             <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.port.failed else 'hidden' }}">
               {{ $t($n('emailForm/port/errors/0')) }}
@@ -122,7 +122,7 @@
               name="username"
               id="username"
               placeholder="{{ $t('email.placeholder.username') }}"
-              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.username.failed else '' }}"
+              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.username.failed else '' }}"
             />
             <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.username.failed else 'hidden' }}">
               {{ $t($n('emailForm/username/errors/0')) }}
@@ -136,7 +136,7 @@
               name="password"
               id="password"
               placeholder="{{ $t('email.placeholder.password') }}"
-              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.password.failed else '' }}"
+              class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if emailForm.password.failed else '' }}"
             />
             <div class="mt-1 text-sm text-rose-700 {{ '' if emailForm.password.failed else 'hidden' }}">
               {{ $t($n('emailForm/password/errors/0')) }}
@@ -151,7 +151,7 @@
               type="checkbox"
               name="allowInsecure"
               id="allowInsecure"
-              class="h-4 w-4 rounded border-slate-300 text-blue-600 focus:ring-blue-500"
+              class="h-4 w-4 rounded border-slate-300 text-primary-600 focus:ring-primary-500"
             />
             <span>{{ $t('email.allowInsecure') }}</span>
           </label>
@@ -161,7 +161,7 @@
               type="checkbox"
               name="ssl"
               id="ssl"
-              class="h-4 w-4 rounded border-slate-300 text-blue-600 focus:ring-blue-500"
+              class="h-4 w-4 rounded border-slate-300 text-primary-600 focus:ring-primary-500"
             />
             <span>{{ $t('email.ssl') }}</span>
           </label>
@@ -175,7 +175,7 @@
         <div class="rounded-md border border-rose-200 bg-rose-50 p-3 text-sm text-rose-800">{{ $t('email.failed') }}</div>
         {% endif %}
 
-        <button type="submit" class="inline-flex items-center rounded-md bg-blue-600 px-5 py-2.5 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500/30">
+        <button type="submit" class="inline-flex items-center rounded-md bg-primary-600 px-5 py-2.5 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500/30">
           {{ $t('email.send') }}
         </button>
       </form>
