--- a/example/lib/widgets/example/person.j2.html
+++ b/example/lib/widgets/example/person.j2.html
@@ -46,7 +46,7 @@
                     🗑️
                   </button>
                 </form>
-                <a href="/example/person/{{ person._id }}" class="inline-flex h-7 w-7 items-center justify-center rounded-full border border-slate-200 text-[11px] text-blue-600 hover:bg-blue-50 focus:outline-none focus:ring-2 focus:ring-blue-500/30" title="Edit">✏️</a>
+                <a href="/example/person/{{ person._id }}" class="inline-flex h-7 w-7 items-center justify-center rounded-full border border-slate-200 text-[11px] text-primary-600 hover:bg-primary-50 focus:outline-none focus:ring-2 focus:ring-primary-500/30" title="Edit">✏️</a>
               </div>
             </td>
           </tr>
