--- a/example/lib/widgets/example/route.j2.html
+++ b/example/lib/widgets/example/route.j2.html
@@ -25,7 +25,7 @@
           <tr class="odd:bg-white even:bg-slate-50">
             <td class="px-4 py-2 align-top text-sm text-slate-700">{{ loop.index }}</td>
             <td class="px-4 py-2 align-top text-sm">
-              <a class="text-blue-700 hover:underline" href="{{ route.fullPath }}">
+              <a class="text-primary-700 hover:underline" href="{{ route.fullPath }}">
                 [{{ route.method }}]
                 {{ route.fullPath }}
               </a>
@@ -46,7 +46,7 @@
       <li class="px-4 py-3">
         <div class="flex flex-col gap-1 md:flex-row md:items-center md:gap-3">
           <b class="md:w-48">{{ $t('webRouteExample.router') }}</b>
-          <i class="text-blue-600">example/lib/route/web_route.dart</i>
+          <i class="text-primary-600">example/lib/route/web_route.dart</i>
         </div>
       </li>
     </ul>
