--- a/example/lib/widgets/example/database.j2.html
+++ b/example/lib/widgets/example/database.j2.html
@@ -46,11 +46,11 @@
           type="text"
           name="title"
           placeholder="{{ $t('database.table.input.placeholder.title') }}"
-          class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30"
+          class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30"
         />
         <button
           type="submit"
-          class="inline-flex items-center justify-center rounded-md bg-blue-600 px-3 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500/30"
+          class="inline-flex items-center justify-center rounded-md bg-primary-600 px-3 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500/30"
         >{{ $t('database.table.button.add') }}</button>
       </form>
       <div class="pt-2 text-sm text-slate-600">
