--- a/example/lib/widgets/example/forms/form_person.j2.html
+++ b/example/lib/widgets/example/forms/form_person.j2.html
@@ -12,7 +12,7 @@
         name="name"
         value="{{ $n('form/name/value') }}"
         placeholder="Enter your name"
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/name/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/name/failed') else '' }}"
       />
       <div class="mt-1 text-xs text-rose-700 {{ '' if $n('form/name/failed') else 'hidden' }}">{{ $t($n('form/name/errors/0')) }}</div>
     </div>
@@ -25,7 +25,7 @@
         value="{{ $n('form/email/value') }}"
         placeholder="Enter your email"
         {% if data._id %}readonly disabled{% endif %}
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'opacity-60 cursor-not-allowed' if data._id else '' }} {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/email/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'opacity-60 cursor-not-allowed' if data._id else '' }} {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/email/failed') else '' }}"
       />
       <div class="mt-1 text-xs text-rose-700 {{ '' if $n('form/email/failed') else 'hidden' }}">{{ $t($n('form/email/errors/0')) }}</div>
     </div>
@@ -41,7 +41,7 @@
         name="age"
         value="{{ $n('form/age/value') }}"
         placeholder="Enter your age"
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/age/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/age/failed') else '' }}"
       />
       <div class="mt-1 text-xs text-rose-700 {{ '' if $n('form/age/failed') else 'hidden' }}">{{ $t($n('form/age/errors/0')) }}</div>
     </div>
@@ -53,7 +53,7 @@
         name="birthday"
         value="{{ $n('form/birthday/value') | dateFormat('yyyy-MM-ddThh:mm') }}"
         {% if data._id %}readonly disabled{% endif %}
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'opacity-60 cursor-not-allowed' if data._id else '' }} {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/birthday/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'opacity-60 cursor-not-allowed' if data._id else '' }} {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/birthday/failed') else '' }}"
       />
       <div class="mt-1 text-xs text-rose-700 {{ '' if $n('form/birthday/failed') else 'hidden' }}">{{ $t($n('form/birthday/errors/0')) }}</div>
     </div>
@@ -70,7 +70,7 @@
         name="height"
         value="{{ $n('form/height/value') }}"
         placeholder="Enter your height"
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/height/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/height/failed') else '' }}"
       />
       <div class="mt-1 text-xs text-rose-700 {{ '' if $n('form/height/failed') else 'hidden' }}">{{ $t($n('form/height/errors/0')) }}</div>
     </div>
@@ -79,7 +79,7 @@
       <select
         id="job_id"
         name="job_id"
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/job_id/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/job_id/failed') else '' }}"
       >
         <option value="">Select Job</option>
         {% for job in jobs %}
@@ -102,7 +102,7 @@
           id="jobs_{{ job._id }}"
           name="jobs[]"
           value="{{ job._id | oid }}"
-          class="h-4 w-4 rounded border-slate-300 text-blue-600 focus:ring-blue-500"
+          class="h-4 w-4 rounded border-slate-300 text-primary-600 focus:ring-primary-500"
           {{ 'checked' if ((job._id) in oids) else '' }}
         />
         <span class="truncate">{{ job.title }}</span>
@@ -123,7 +123,7 @@
         value="{{ $n('form/password/value') }}"
         placeholder="Enter password"
         {% if data._id %}readonly disabled{% endif %}
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'opacity-60 cursor-not-allowed' if data._id else '' }} {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/password/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'opacity-60 cursor-not-allowed' if data._id else '' }} {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/password/failed') else '' }}"
       />
       <div class="mt-1 text-xs text-rose-700 {{ '' if $n('form/password/failed') else 'hidden' }}">{{ $t($n('form/password/errors/0')) }}</div>
     </div>
@@ -132,7 +132,7 @@
       <select
         id="gender"
         name="gender"
-        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/gender/failed') else '' }}"
+        class="h-10 w-full rounded-md border border-slate-300 bg-white px-3 text-sm shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300 focus:border-rose-500 focus:ring-rose-300' if $n('form/gender/failed') else '' }}"
       >
         <option {{ 'selected' if $n('form/gender/value') == 'none' else '' }} value="none">Don't ask me!</option>
         <option {{ 'selected' if $n('form/gender/value') == 'male' else '' }} value="male">Male</option>
@@ -150,22 +150,22 @@
       <input name="married" type="hidden" value="false" />
       <label class="relative inline-flex cursor-pointer items-center">
         <input name="married" id="married" type="checkbox" value="true" class="peer sr-only" {{ 'checked' if $n('form/married/value') else '' }} />
-        <div class="h-5 w-9 rounded-full bg-slate-300 transition peer-checked:bg-blue-600"></div>
+        <div class="h-5 w-9 rounded-full bg-slate-300 transition peer-checked:bg-primary-600"></div>
         <div class="absolute left-0 top-0 h-5 w-5 translate-x-0 rounded-full bg-white shadow transition peer-checked:translate-x-4"></div>
         <span class="ml-3 text-xs text-slate-600">{{ 'Yes' if $n('form/married/value') else 'No' }}</span>
       </label>
     </div>
     <div>
       <label for="color" class="mb-1 block text-sm font-medium text-slate-700">Color</label>
-      <input type="color" id="color" name="color" value="{{ $n('form/color/value','#FF0055') }}" title="Choose your color" class="h-10 w-24 cursor-pointer rounded-md border border-slate-300 bg-white p-1 shadow-sm focus:border-blue-500 focus:ring-2 focus:ring-blue-500/30" />
+      <input type="color" id="color" name="color" value="{{ $n('form/color/value','#FF0055') }}" title="Choose your color" class="h-10 w-24 cursor-pointer rounded-md border border-slate-300 bg-white p-1 shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30" />
     </div>
   </div>
 
   <!-- Actions -->
   <div class="flex flex-wrap gap-3 border-t border-slate-200 pt-4">
-    <button type="submit" class="inline-flex items-center rounded-md bg-blue-600 px-5 py-2.5 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500/30">Submit</button>
+    <button type="submit" class="inline-flex items-center rounded-md bg-primary-600 px-5 py-2.5 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500/30">Submit</button>
     {% if data._id %}
-    <a href="{{ $e.url('/example/person') }}" class="inline-flex items-center rounded-md border border-slate-300 bg-white px-5 py-2.5 text-sm font-medium text-slate-700 shadow-sm hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-blue-500/30">Cancel</a>
+    <a href="{{ $e.url('/example/person') }}" class="inline-flex items-center rounded-md border border-slate-300 bg-white px-5 py-2.5 text-sm font-medium text-slate-700 shadow-sm hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-primary-500/30">Cancel</a>
     {% endif %}
   </div>
 </form>
