--- a/example/lib/widgets/example/i18n.j2.html
+++ b/example/lib/widgets/example/i18n.j2.html
@@ -8,14 +8,14 @@
   <div class="flex flex-col gap-4 sm:flex-row sm:items-start sm:justify-between">
     <h3 class="text-lg font-semibold text-slate-800">{{ $t('i18n.title') }}</h3>
     <details class="relative" dir="ltr">
-      <summary class="list-none inline-flex cursor-pointer select-none items-center gap-2 rounded-md border border-slate-300 bg-white px-3 py-2 text-xs font-medium text-slate-700 shadow-sm hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-blue-500/30">
+      <summary class="list-none inline-flex cursor-pointer select-none items-center gap-2 rounded-md border border-slate-300 bg-white px-3 py-2 text-xs font-medium text-slate-700 shadow-sm hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-primary-500/30">
         <span class="font-mono text-[11px]">{{ $e.ln | upper }}</span>
         <svg class="h-3 w-3 text-slate-500" viewBox="0 0 10 6" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M1 1l4 4 4-4" stroke-linecap="round" stroke-linejoin="round"/></svg>
       </summary>
       <ul class="absolute right-0 z-20 mt-2 w-56 max-h-72 overflow-y-auto rounded-md border border-slate-200 bg-white p-1 text-xs shadow-lg">
         {% for key, language in languages %}
         <li>
-          <a href="{{ $e.urlToLanguage(key) }}" class="flex items-center gap-2 rounded px-2 py-1.5 transition-colors {{ 'bg-blue-600 text-white' if $e.ln == key else 'text-slate-700 hover:bg-slate-100' }}">
+          <a href="{{ $e.urlToLanguage(key) }}" class="flex items-center gap-2 rounded px-2 py-1.5 transition-colors {{ 'bg-primary-600 text-white' if $e.ln == key else 'text-slate-700 hover:bg-slate-100' }}">
             <b class="text-base leading-none">{{ language.flag }}</b>
             <span class="truncate">{{ language.name }}</span>
           </a>
@@ -50,15 +50,15 @@
     <ul class="divide-y divide-slate-200 text-sm">
       <li class="px-4 py-3 flex flex-col gap-1 sm:flex-row sm:items-center">
         <b class="w-40 shrink-0 text-slate-600">{{ $t('i18n.view') }}</b>
-        <i class="text-[13px] text-blue-600">example/lib/widgets/example/i18n.j2.html</i>
+        <i class="text-[13px] text-primary-600">example/lib/widgets/example/i18n.j2.html</i>
       </li>
       <li class="px-4 py-3 flex flex-col gap-1 sm:flex-row sm:items-center">
         <b class="w-40 shrink-0 text-slate-600">{{ $t('i18n.controller') }}</b>
-        <i class="text-[13px] text-blue-600">example/lib/controllers/home_controller.dart</i>
+        <i class="text-[13px] text-primary-600">example/lib/controllers/home_controller.dart</i>
       </li>
       <li class="px-4 py-3 flex flex-col gap-1 sm:flex-row sm:items-center">
         <b class="w-40 shrink-0 text-slate-600">{{ $t('i18n.languagesDirectory') }}</b>
-        <i class="text-[13px] text-blue-600">example/lib/languages</i>
+        <i class="text-[13px] text-primary-600">example/lib/languages</i>
       </li>
     </ul>
     <div class="border-t border-slate-200">
